<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customers.AddCustomerActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTituloI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_cli"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tvUidI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uid_usuario"
            android:textSize="25sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/ivCustomerPhotoI"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/info"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/select_customer_image"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/btnSelectImageI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/select_image"/>

        <Button
            android:id="@+id/btnTakePhotoI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/take_photo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etNamesI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_cli"
                android:drawableLeft="@drawable/add"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etLastNameI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos_cli"
                android:drawableLeft="@drawable/add"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etEmailI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_cli"
                android:drawableLeft="@drawable/add"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etDniI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dni_cli"
                android:drawableLeft="@drawable/add"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etPhoneNumberI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefon_cli"
                android:drawableLeft="@drawable/add"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etAddressI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion_cli"
                android:drawableLeft="@drawable/add"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:layout_gravity="center_horizontal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSaveI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:drawableLeft="@drawable/add"
            android:padding="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>