<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_3"
    tools:context=".misDatos.MisDatosActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/bg_md"/>

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/mc_md"
                android:layout_marginTop="170dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/CircleImageView"/>
        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:background="@drawable/bg_body"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCorreoMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correo_md"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tvCodigoMD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_md"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mis_datos"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/datos_md"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_leyenda"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leyenda_md"
                        android:gravity="center"
                        android:padding="5dp"
                        android:textSize="15sp"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etNombreMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="text"
                        android:hint="@string/nombre_md"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etApellidoMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="text"
                        android:hint="@string/apellido_md"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etFechaNacMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="none"
                        android:hint="@string/fecha_nacimiento"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etEdadMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="number"
                        android:hint="@string/edad_md"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etTelefonoMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="number"
                        android:hint="@string/telefono_md"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etDomicilioMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="text"
                        android:hint="@string/domicilio_md"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etTiktokMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="text"
                        android:hint="@string/tiktok_md"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp">

                    <EditText
                        android:id="@+id/etProfesionMD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15sp"
                        android:inputType="text"
                        android:hint="@string/profesion_md"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="45dp"
                android:drawableLeft="@drawable/load"
                android:text="@string/btn_guardar"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>